--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -29,13 +29,14 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg_vh{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
-.left_bg_lei{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:213px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_lei{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
 .left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
 .left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
 .left_help_img2{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
 .left_help_service{background-image:url(/user{{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:2px;  margin-bottom:5px; margin-left:10px; height:26px;}
+.left_host_vh{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.jpg); background-repeat:repeat-x; width:242px; margin-left:10px; height:33px;}
 .left_top{padding-top:10px;padding-left:33px;}
 .left_help_wid{padding-top:0px;padding-left:5px;}
 .fontcolor{color:#4C4B4B;}
@@ -58,7 +59,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_beiban {height:93px;width:262px;}
 .left_service_color{color:red;}
 .left_hg{height:140px;}
-.host_vh3 {padding-left:30px;padding-top:100px; margin-top:20px;}
+
 
 .right_top{padding-top:0px;padding-right:0px;}
 .topimg3 {text-align:left;background:url(/user{{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
@@ -73,6 +74,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_wid2{height:281px;width:689px;}
 .wid_menu{width:970px;}
 .host_wid{width:190px;}
+.host_top{padding-top:10px;}
 
 
 /*幻灯片*/
