--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -5,36 +5,12 @@
 	  <!--左部文件开始-->
 	  	<div class="left_main_vh">
 			<!--虚拟主机列表代码开始-->
-			<div class="left_box bgcolor_left left_bg_lei" align="left">
-				<div class="left_help_img2"><span class="host_vh3">虚拟主机</span></div>
+			<div class="left_box  left_bg_lei" align="left">
+				<div class="left_host_vh host_top"><span class="right"><b>虚拟主机</b></span></div>
 				<div class="left_help_wid">
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">台湾双线路虚拟主机<span class="host_img"></span></div></td>
-						</tr>
 					    <tr>
 							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">香港双线路虚拟主机</div></td><td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">日本双线路虚拟主机</div></td>
-						</tr>
-				  </table>
-				</div>
-			</div>
-			<!--虚拟主机列表代码结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-		
-		
-			<!--虚拟主机列表代码开始-->
-			<div class="left_box bgcolor_left left_bg_lei" align="left">
-				<div class="left_help_img"></div>
-				<div class="left_help_wid">
-					<table width="95%" border="0" cellpadding="0" cellspacing="0">
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">台湾双线路虚拟主机<span class="host_img"></span></div></td>
 						</tr>
 					    <tr>
 							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
@@ -55,7 +31,6 @@
 	  </td>
       <td valign="top">
 	 	 <!--右边代码开始-->
-		 
 		 
 	  	<!--右部虚拟主机开始-->
 			<div class="right_main">
