--- a/user/view/default/frame/top.html
+++ b/user/view/default/frame/top.html
@@ -21,7 +21,7 @@
         </tr>
       </table>	</td>
     <td background="{{$STATIC}}style/top_bg2.jpg" align="center">
-		<script language="javascript" src="?c=product&a=productList&target=parent.main">
+		<script language="javascript" src="?c=product&a=productList&target=top" >
 		</script>
 	</td>
   </tr>
