--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -1,5 +1,11 @@
 <div class="wid_menu">
-  <table width="970" border="0" cellpadding="0" cellspacing="0" align="center">
+  <table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
+  	  <tr>
+		<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+			当前位置 : <a href="/">首页</a> >> <a href="?c=public&a=host">虚拟主机</a>
+		</td>
+	 </tr>
+	 <tr><td colspan="2" height="5"></td></tr>
     <tr>
       <td valign="top" width="262">
 	  <!--左部文件开始-->
