--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -1,5 +1,13 @@
 {{include file='common/head.html'}}
 <style>
+/* 定义全局变量 */
+body {
+margin: 0px;
+font-size:12px;
+line-height:150%;
+background:#F6F4F5;
+font-family: "宋体";
+}
 a:link {color: #003366;text-decoration: none;}
 a:visited {color: #003366;text-decoration: none;}
 a:hover {color: #DB1333;text-decoration: underline;}
@@ -177,6 +185,7 @@ img{margin:0;padding:0;border:0;}
       </tr>
 	</table>
 <div>
+
 </div>
 
 
