--- a/user/view/default/noframe.html
+++ b/user/view/default/noframe.html
@@ -1,5 +1,5 @@
 {{dispatch c='public'  a='head'}}
-<table width="{{$width}}" border="0" align="center">
+<table width="{{$width}}" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="150" valign="top">{{dispatch c=$smarty.request.c a='left'}}</td>
     <td valign='top' align='left'>{{$main}}</td>
