--- a/user/view/default/public/foot.html
+++ b/user/view/default/public/foot.html
@@ -1,5 +1,6 @@
 <!-- body结束-------------------------------------------------------------------------------------------------------------------------------- -->
 <div align="center">
+<div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
 	<div class="left_box bgcolor_left left_bg_foot">
 		 <div class="left_help_wid">
 			<table width="960" border="0" cellpadding="0" cellspacing="0">
