--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -1,3 +1,4 @@
+<div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
 <div class="wid_menu">
   <table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
     <tr>
@@ -130,7 +131,6 @@
 						</tr>
 					</table>
 				</div>
-				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			</div>
 		<!--幻灯片机结束-->	
 		 
