--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -24,6 +24,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 
 
 .left_box {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #C2C2C2 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
+.left_box_host {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #FFFFFF 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
 .mar_h{ padding-bottom:10px;}
 .Left_main {FLOAT: left; WIDTH: 263px;}
 .Left_main_vh {FLOAT: left; WIDTH: 213px;}
@@ -39,6 +40,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_bg_lei{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
+.left_vh{background-image:url(/user{{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
 .left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
 .left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
 .left_help_img2{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
@@ -46,6 +48,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_host_vh{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.jpg); background-repeat:repeat-x; width:242px; margin-left:10px; height:33px;}
 .left_top{padding-top:10px;padding-left:33px;}
 .left_help_wid{padding-top:0px;padding-left:5px;}
+.left_host_wid{padding-top:0px;padding-left:0px;}
 .fontcolor{color:#4C4B4B;}
 .height_t{height:7px;}
 .topimg_1 {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
@@ -66,11 +69,13 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_beiban {height:93px;width:262px;}
 .left_service_color{color:red;}
 .left_hg{height:140px;}
+.host_l{ width:185px; height:30px;}
 
 
 .right_top{padding-top:0px;padding-right:0px;}
 .topimg3 {text-align:left;background:url(/user{{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
 .host_bg {text-align:left;background:url(/user{{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.left_host_bg {text-align:left;background:url(/user{{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
 .color_red{color:#FF0000;}
 .color_orange{color:#D7631A;}
 .right_blue{color:#048ABF;}
@@ -81,7 +86,11 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_wid2{height:281px;width:689px;}
 .wid_menu{width:960px;}
 .host_wid{width:190px;}
+.l_host_wid{width:200px;}
 .host_top{padding-top:10px;}
+.wid_l{width:7px;}
+.wid_2{width:9px;}
+.heig_l{height:7px;}
 
 
 /*幻灯片*/
