--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -11,49 +11,36 @@
 	  <!--左部文件开始-->
 	  	<div class="left_main_vh">
 			<!--虚拟主机列表代码开始-->
-			<div class="left_box  left_bg_lei" align="left">
-				<div class="left_host_vh host_top"><span class="right"><b>虚拟主机</b></span></div>
-				<div class="left_help_wid">
-					<table width="95%" border="0" cellpadding="0" cellspacing="0">
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">香港双线路虚拟主机</div></td><td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">日本双线路虚拟主机</div></td>
-						</tr>
-				  </table>
-				</div>
+			<div class="left_vh"></div>
+			<div class="left_box_host l_host_wid" align="left">
+				<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
+					<tr>
+						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+					</tr>
+					<tr><td class="heig_l"></td></tr>
+					<tr>
+						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+					</tr>
+					<tr><td class="heig_l"></td></tr>
+					<tr>
+					<tr>
+						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+					</tr>
+					<tr><td class="heig_l"></td></tr>
+					<tr>
+					<tr>
+						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+					</tr>
+					<tr><td class="heig_l"></td></tr>
+					<tr>
+					<tr>
+						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+					</tr>
+					<tr><td class="heig_l"></td></tr>
+			  </table>
 			</div>
 			<!--虚拟主机列表代码结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			<!--虚拟主机列表代码开始-->
-			<div class="left_box  left_bg_lei" align="left">
-				<div class="left_host_vh host_top"><span class="right"><b>虚拟主机</b></span></div>
-				<div class="left_help_wid">
-					<table width="95%" border="0" cellpadding="0" cellspacing="0">
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">美国双线路虚拟主机</div></td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">香港双线路虚拟主机</div></td><td>
-						</tr>
-					    <tr>
-							<td class="fontcolor"><div class="left_box host_vh host_wid">日本双线路虚拟主机</div></td>
-						</tr>
-				  </table>
-				</div>
-			</div>
-			<!--虚拟主机列表代码结束-->
-			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+		<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 		</div>
 	  <!--左部文件结束-->
 	  </td>
