--- a/user/view/default/public/viewnews.html
+++ b/user/view/default/public/viewnews.html
@@ -2,9 +2,15 @@
 	<div class="head_block tb_wid">&nbsp;{{$new.title}}</div>
 	<div class="block tb_wid">
  		<table id="table_2" cellpadding="0" cellspacing="1">
+ 		
     	 <tr>
      	 <td class="td_bgc right_2" >{{$new.body}}</td>
      	 </tr>
+     	 
+     	 <tr>
+     	 <td class="td_bgc right_2" >{{$new.add_time}}</td>
+     	 </tr>
+     	 
  		</table>
 	</div>
 </div>
