--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -55,7 +55,7 @@
 							<table border="0" cellpadding="0" cellspacing="4" id="table_r">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -76,7 +76,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 								    </table>
 								  </td>
@@ -105,7 +105,7 @@
 							
 								<tr>
 								<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-								<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								<td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -131,7 +131,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -156,7 +156,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -181,7 +181,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -205,7 +205,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -230,7 +230,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -253,7 +253,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -278,7 +278,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
