修改公告页

--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -14,6 +14,7 @@ a:hover {color: #DB1333;text-decoration: underline;}
 a:active {color: #2583EA;text-decoration: none;}
 .right {text-align:left;padding-left:10px;}
 .right_h {text-align:left;padding-left:30px;}
+.right_n {text-align:right;padding-left:30px;}
 .right_r{text-align:left;padding-left:40px;}
 .white  {color: #FFFFFF}
 .right_r {text-align:left;padding-right:5px;}
@@ -33,6 +34,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .bgcolor_left2{background-color:#ffffff;}
 #table_t {width:85%; border:0px; line-height:20px;}
 #table_r {width:100%; border:0px;}
+#table_news{width:960px; border:0px;}
 #table_rr {width:100%; border:0px; line-height:24px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
@@ -70,6 +72,8 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_service_color{color:red;}
 .left_hg{height:140px;}
 .host_l{ width:185px; height:30px;}
+.mar_news{ margin-top:10px;}
+.f_size{ font-size:18px;}
 
 
 .right_top{padding-top:0px;padding-right:0px;}
@@ -91,6 +95,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .wid_l{width:7px;}
 .wid_2{width:9px;}
 .heig_l{height:7px;}
+.heig_news{height:300px;}
 
 
 /*幻灯片*/
