--- a/user/view/default/public/viewnews.html
+++ b/user/view/default/public/viewnews.html
@@ -1,16 +1,12 @@
+<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 <div align="center">
-	<div class="head_block tb_wid">&nbsp;{{$new.title}}</div>
-	<div class="block tb_wid">
- 		<table id="table_2" cellpadding="0" cellspacing="1">
- 		
-    	 <tr>
-     	 <td class="td_bgc right_2" >{{$new.body}}</td>
-     	 </tr>
-     	 
-     	 <tr>
-     	 <td class="td_bgc right_2" >{{$new.add_time}}</td>
-     	 </tr>
-     	 
- 		</table>
-	</div>
+	<table id="table_news" cellpadding="0" cellspacing="0">
+	 <tr>
+	 	<td align="center" class="left_service_color f_size"><b>{{$new.title}}</b></td></tr>
+	 <tr>
+	 <tr><td background="/user{{$STATIC}}/images/newline.jpg" height="6"></td></tr>
+	 <tr><td class="right_n right_hg2">更新时间 : {{$new.add_time}}</td></tr>
+	 <td class="td_bgc right_2 heig_news" valign="top">{{$new.body}}</td>
+	 </tr>
+  </table>
 </div>
