--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -54,7 +54,7 @@
 			<!--帮助代码结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--备案图片结束-->
-			<div class="bgcolor_left left_bg_help left_beiban"><a href="#"><img src="/user{{$STATIC}}images/l_beian.jpg" border="0"/></a></div>
+			<div class="bgcolor_left left_bg_help left_beiban"><a href="http://www.miitbeian.gov.cn" target='_blank'><img src="/user{{$STATIC}}images/l_beian.jpg" border="0"/></a></div>
 			<!--备案图片结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--客服代码开始-->
