--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -1,1 +1,37 @@
-not null
+<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+<div align="center">
+	<table id="table_news" cellpadding="0" cellspacing="0" >
+		<tr>
+			<td width="210"></td>
+			<td width="750" height="173"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
+		</tr>
+		<tr>
+			<td width="210"></td>
+			<td width="750" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
+				<table cellspacing="10" width="100%">
+					<tr><td align="left"><img src="/user{{$STATIC}}/images/info_Title_pic_contact.jpg" /></td></tr>
+					<tr><td class="right_h" align="left" height="30">
+						<p> 南昌邦腾科技有限公司<br>
+							客服电话：0791-88355247<br>
+							地址：江西省南昌市京东小区G18栋<br />
+							邮编：330029<br />
+							E-mail：smilefly99@126.com<br />
+						</p>
+						<p>
+							销售QQ：86995537&nbsp;&nbsp; 5968629&nbsp;&nbsp;13062849<br>
+							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=86995537&site=qq&menu=yes">
+							<img border="0" src="http://wpa.qq.com/pa?p=2:86995537:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=5968629&site=qq&menu=yes">
+							<img border="0" src="http://wpa.qq.com/pa?p=2:5968629:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
+							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=13062849&site=qq&menu=yes">
+							<img border="0" src="http://wpa.qq.com/pa?p=2:13062849:42" alt="请联系客服QQ" title="请联系客服QQ"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							技术支持QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1669280222&site=qq&menu=yes">
+							<img border="0" src="http://wpa.qq.com/pa?p=2:1669280222:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
+						</p>
+					</td></tr>
+			  </table>
+			</td>
+		</tr>
+  </table>
+</div>
