--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -26,7 +26,7 @@
 							<img border="0" src="http://wpa.qq.com/pa?p=2:5968629:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
 							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=13062849&site=qq&menu=yes">
 							<img border="0" src="http://wpa.qq.com/pa?p=2:13062849:42" alt="请联系客服QQ" title="请联系客服QQ"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							技术支持QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1669280222&site=qq&menu=yes">
+							&nbsp;&nbsp;技术支持QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1669280222&site=qq&menu=yes">
 							<img border="0" src="http://wpa.qq.com/pa?p=2:1669280222:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
 						</p>
 					</td></tr>
