--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -2,12 +2,32 @@
 <div align="center">
 	<table id="table_news" cellpadding="0" cellspacing="0" >
 		<tr>
-			<td width="210"></td>
-			<td width="750" height="173"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
+			<td width="210" rowspan="2" valign="top">
+				<!--虚拟主机列表代码开始-->
+				<div class="left_vh"></div>
+				<div class="left_box_host l_host_wid" align="left">
+					<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
+						<tr>
+							<td class="wid_2"></td>
+							<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="?c=public&a=help">帮助文档</a></td>
+							<td class="wid_l"></td>							
+						</tr>
+						<tr><td class="heig_l"></td></tr>
+						<tr>
+							<td class="wid_2"></td>
+							<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="?c=public&a=host">虚拟主机</a></td>
+							<td class="wid_l"></td>
+						</tr>
+						<tr><td class="heig_l"></td></tr>
+				  </table>
+				</div>
+				<!--虚拟主机列表代码结束-->
+			</td>
+			<td width="750" height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
 		</tr>
 		<tr>
-			<td width="210"></td>
 			<td width="750" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
+			<!--客服代码开始-->
 				<table cellspacing="10" width="100%">
 					<tr><td align="left"><img src="/user{{$STATIC}}/images/info_Title_pic_contact.jpg" /></td></tr>
 					<tr><td class="right_h" align="left" height="30">
@@ -31,6 +51,7 @@
 						</p>
 					</td></tr>
 			  </table>
+			  <!--客服代码开始-->
 			</td>
 		</tr>
   </table>
