--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -81,6 +81,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .host_bg {text-align:left;background:url(/user{{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
 .left_host_bg {text-align:left;background:url(/user{{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
 .color_red{color:#FF0000;}
+.color_blue{color:#055676;}
 .color_orange{color:#D7631A;}
 .right_blue{color:#048ABF;}
 .right_hg{height:30px;}
