--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -43,6 +43,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
 .left_vh{background-image:url(/user{{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_host{background-image:url(/user{{$STATIC}}images/host_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
 .left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
 .left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
 .left_help_img2{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
