--- a/user/view/default/public/host.html
+++ b/user/view/default/public/host.html
@@ -11,7 +11,7 @@
 	  <!--左部文件开始-->
 	  	<div class="left_main_vh">
 			<!--虚拟主机列表代码开始-->
-			<div class="left_vh"></div>
+			<div class="left_host"></div>
 			<div class="left_box_host l_host_wid" align="left">
 				<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
 					<tr>
