--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -43,6 +43,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
 .left_vh{background-image:url(/user{{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_reg{background-image:url(/user{{$STATIC}}images/reg1.jpg); background-repeat:repeat-x; width:199px; margin-top:0px; margin-left:0px; height:396px;}
 .left_host{background-image:url(/user{{$STATIC}}images/host_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
 .left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
 .left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
@@ -50,6 +51,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .left_help_service{background-image:url(/user{{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:2px;  margin-bottom:5px; margin-left:10px; height:26px;}
 .left_host_vh{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.jpg); background-repeat:repeat-x; width:242px; margin-left:10px; height:33px;}
 .left_top{padding-top:10px;padding-left:33px;}
+.right_reg{padding-left:33px;}
 .left_help_wid{padding-top:0px;padding-left:5px;}
 .left_host_wid{padding-top:0px;padding-left:0px;}
 .fontcolor{color:#4C4B4B;}
@@ -169,7 +171,7 @@ img{margin:0;padding:0;border:0;}
 				密码:
 				<input name="passwd" type="password" size="12" />
 				<input type="submit" name="Submit" value="登录" />
-				<a href="user/frame.php?c=public&a=registerForm"><font color='red'>注册</font></a>
+				<a href="?c=public&a=register_n"><font color='red'>注册</font></a>
 				忘记密码 
 				{{/if}}
 	  		</td>
