--- a/user/view/default/index/help.html
+++ b/user/view/default/index/help.html
@@ -2,45 +2,12 @@
 <div align="center">
 	<table id="table_news" cellpadding="0" cellspacing="0" >
 		<tr>
-			<td width="210" rowspan="2" valign="top">
-				<!--虚拟主机列表代码开始-->
-				<div class="left_vh"></div>
-				<div class="left_box_host l_host_wid" align="left">
-					<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
-						<tr>
-							<td class="wid_2"></td>
-							<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">新手指南</a></td>
-							<td class="wid_l"></td>
-						</tr>
-						<tr><td class="heig_l"></td></tr>
-						<tr>
-							<td class="wid_2"></td>
-							<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">虚拟主机问题</a></td>
-							<td class="wid_l"></td>
-						</tr>
-						<tr><td class="heig_l"></td></tr>
-						<tr>
-							<td class="wid_2"></td>
-							<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">域名问题</a></td>
-							<td class="wid_l"></td>
-						</tr>
-						<tr><td class="heig_l"></td></tr>
-						<tr>
-							<td class="wid_2"></td>
-							<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">ICP备案</a></td>
-							<td class="wid_l"></td>
-						</tr>
-						<tr><td class="heig_l"></td></tr>
-				  </table>
-				</div>
-				<!--虚拟主机列表代码结束-->
-			</td>
 			<td width="750" height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
 		</tr>
 		<tr>
 			<td width="750" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
 			<!--帮助代码开始-->
-				<table align="right" border="0" cellpadding="0" cellspacing="10" width="750">
+				<table align="left" border="0" cellpadding="0" cellspacing="10" width="750">
 					  <tr><td height="3"></td></tr>
 					  <tr><td bgcolor="#ebf5fb" height="25">&nbsp; 一、新手指南 </td></tr>
 					  
