--- a/user/view/default/help/index.html
+++ b/user/view/default/help/index.html
@@ -1,97 +1,79 @@
 <div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-<div align="center">
-	<table id="table_news" cellpadding="0" cellspacing="0" >
-		<tr>
-			<td width="750" height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
-		</tr>
-		<tr>
-			<td width="750" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
-			<!--帮助代码开始-->
-				<table align="left" border="0" cellpadding="0" cellspacing="10" width="750">
-					  <tr><td height="3"></td></tr>
-					  <tr><td bgcolor="#ebf5fb" height="25">&nbsp; 一、新手指南 </td></tr>
-					  
-					  
-					  
-					   <!--提问代码开始-->
-	                  <tr>
-                    	<td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
-							<div class="black12" style="CURSOR: pointer" onClick="faq('faq1.1')">1.1 问：如何注册使用空间? 
-							<span class="color_red">查看答案</span></div>
-						</td>
-                  	  </tr>
-					  <tr>
-                    	<td>
-                        	<div class="color_blue"  id="faq1.1" style="">
-								答：注册会员帐号后登陆会员中心点击购买产品列表，或者在顶部右边的产品快速通道中选择产品注册购买;
-							</div>
-					    </td>
-					  </tr>
-					<!--提问代码结束-->
-					
-					
-					
-                  <tr>
-                    <td class="nblue12" bgcolor="#ebf5fb" height="25">&nbsp; <span class="nblue14bold">二、虚拟主机常见问题</span> </td>
-                  </tr>
- 					<!--提问代码开始-->
-                  <tr>
-                    <td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
-                     <div class="black12" style="CURSOR: pointer" onClick="faq('faq2.1')">2.1 问：空间如何上传文件? <span class="color_red">查看答案</span></div>
-                     </td>
-                  </tr>
-				  <tr>
-                    <td>
-                        <div class="color_blue" id="faq2.1" style="">
-							答：使用FTP传输工具，或者在管理面板中使用在线文件管理功能上传
-						</div>
-				    </td>
-				  </tr>
-				  <!--提问代码结束-->
-				  
-				  
-            </table>
-			  <!--帮助代码结束-->
-			</td>
-		</tr>
-  </table>
-</div>
-<!--问答弹出代码开始-->
-<script>
-// Example: obj = findObj("image1");
-function findObj(theObj, theDoc)
-{
-  var p, i, foundObj;
-  
-  if(!theDoc) theDoc = document;
-  if( (p = theObj.indexOf("?")) > 0 && parent.frames.length)
-  {
-    theDoc = parent.frames[theObj.substring(p+1)].document;
-    theObj = theObj.substring(0,p);
-  }
-  if(!(foundObj = theDoc[theObj]) && theDoc.all) foundObj = theDoc.all[theObj];
-  for (i=0; !foundObj && i < theDoc.forms.length; i++) 
-    foundObj = theDoc.forms[i][theObj];
-  for(i=0; !foundObj && theDoc.layers && i < theDoc.layers.length; i++) 
-    foundObj = findObj(theObj,theDoc.layers[i].document);
-  if(!foundObj && document.getElementById) foundObj = document.getElementById(theObj);
-  
-  return foundObj;
-}
+<div align="left">
+	<ul color="red" >一.新手指南</ul>
+	<br>
+	<li>如何注册使用空间?</li>
+	<br>
+	<dd>答：注册会员帐号后登陆会员中心点击购买产品列表，或者在顶部右边的产品快速通道中选择产品注册购买;</dd>
+	
+	<br>
+	
+	<li>请问我如何付款</li>
+	<br>
+	<dd>目前我们为您提供的支付方式有：网上付款、银行电汇、到我公司付款,支票付费等付款方式,您可以择其一种方便您付款的方式进行支付
+	，支付后可登陆会员中心查看你的余额，如余额未到账，请查看您的充值记录并及时联系我们。
+	</dd>
+	<br>
+	
+	
+	<ul color="red">二.虚拟主机相关问题</ul>
+	<li>空间如何上传文件?</li>
+	<br>
+	<dd>答：使用FTP传输工具，或者在管理面板中使用在线文件管理功能上传,如果文件太多，可压缩后上传，我们支持在线解压缩</dd>
+	
+	<br></br>
+	
+	<li>请问你们的在线安装程序，可以放上我常用的程序吗</li>
+	<br>
+	<dd>可以的，只要你的程序是安全的，安装程序可以定制</dd>
+	
+	<br><br>
+	
+	<li>请问我安装了在线安装程序里的discuz程序，我要换别的怎么办</li>
+	<br>
+	<dd>您好，通过在线安装程序里安装的程序，如果您需要更换，可以在安装程序里删除再安装其它程序即可。删除之前请备份数据库</dd>
+	
+	<br>
+	
+	<li>请问	你们的产品可以定制吗</li>
+	<dd>您好，我们的产品大小如果您不满意，可以联系我们客服，定制您需要的产品大小。
+	<br>
+	
+	
+	<li>为什么我上传的rar文件无法解压</li>
+	<br>
+	<dd>答：你好，我们的管理系统支持7z和zip格式的文件解压，暂时不支持rar文件解压</dd>
+	
+	<br><br>
+	
+	<li>请问我的网站如何备案</li>
+	<br>
+	<dd>你好，请登陆<a href="http://www.miitbeian.gov.cn" target="_blank">http://www.miitbeian.gov.cn</a>备案网站，注册后填写网站资料，等待信息产业部审核即可。</dd>
+	
+	<br><br>
+	
+	<li>我遇到问题如何寻求帮助？</li>
+	<br>
+	<dd>当您在使用我们产品时遇到问题，您可以通过以下方式获得帮助
+	</br><br>
+		<dd>1.首先访问我们首页上方帮助中心，查找相应解决方法，强烈建议您使用“输入问题找出答案”功能，即可搜索到所有关于的说明 ；
+		</dd><br>
+		<br>
+		<dd>
+		2.如果您无法在客服中心频道中寻找到相应解决方法时，可以登陆我们会员区，在线提交问题，我们工作人员将在第一时间为您解答；
+		</dd><br><dd>
+		3.您也可以随时拨打24小时客户服务热线，我们客服将竭诚为您服务
+		</dd><br><dd>
+		售前电话：0791-8355247
+		</dd><br><dd>
+		售后电话: 0791-8355247
+		</dd>
+	</dd>
+		
+	<br>
+		
+		
+	</div>
 
-function faq(id)
-{
-	var obj = findObj(id);
-  if (obj.style)
-  {
-		if(obj.style.display == "none")
-		{
-			obj.style.display = "";
-		}else
-		{
-			obj.style.display = "none";
-		}
-  }
-}
-</script>
-<!--问答弹出代码结束-->
+				
+				
