--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -10,7 +10,7 @@
 		}
 		</script>
 		<div id="masterdiv">
-		<div align="center"><a href="/" target="_blank"><img src='{{$STATIC}}/style/kanglevhms.gif' border="0"/></a></div>
+		<div align="center"><a href="/" target="_blank"><img src='{{$STATIC}}/images/toindex.gif' border="0"/></a></div>
 			<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu">
 			  帐户管理
 			</h1>
