--- a/user/view/default/public/error.html
+++ b/user/view/default/public/error.html
@@ -1,1 +1,26 @@
-ddddddd
+<style>
+.error_box {BORDER-RIGHT: #E1DDDD 1px solid; BORDER-TOP: #E1DDDD 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #E1DDDD 1px solid; BORDER-BOTTOM: #E1DDDD 1px solid;}
+</style>
+<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+<div align="center">
+	<div class="error_box">
+		<table id="table_news" cellpadding="0" cellspacing="10" >
+			<tr>
+				<td width="550" height="330"valign="top">
+					<table width=100%>
+						<tr>
+							<td align="left">
+							<img src='/user{{$STATIC}}/images/logo.jpg' width="388" height="62">
+							</td>
+						</tr>
+						<tr>
+							<td align="center" height="270" class="color_red">
+							<p><b>用户名或密码错误，请重新登陆</b></p>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+	  </table>
+	</div>
+</div>
