--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -1,11 +1,11 @@
 <div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-<div align="center">
+<div align="center" class="right">
 	<table id="table_news" cellpadding="0" cellspacing="0" >
 		<tr>
-			<td width="750" height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
+			<td height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
 		</tr>
 		<tr>
-			<td width="750" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
+			<td height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
 			<!--客服代码开始-->
 				<table cellspacing="10" width="100%">
 					<tr><td align="left"><img src="/user{{$STATIC}}/images/info_Title_pic_contact.jpg" /></td></tr>
