--- a/user/view/default/public/error.html
+++ b/user/view/default/public/error.html
@@ -15,7 +15,7 @@
 						</tr>
 						<tr>
 							<td align="center" height="270" class="color_red">
-							<p><b>用户名或密码错误，请重新登陆</b></p>
+							<p><b>鐢ㄦ埛鍚嶆垨瀵嗙爜閿欒锛岃閲嶆柊鐧婚檰</b></p>
 							</td>
 						</tr>
 					</table>
