--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -1,6 +1,6 @@
 <div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
 <div class="wid_menu">
-  <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
+  <table width="{{$width}}" border="0" cellpadding="0" cellspacing="0" align="center">
       <td valign="top">
 	 	 <!--右边代码开始-->
 		 
