修改错误页面

--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -26,6 +26,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 
 .left_box {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #C2C2C2 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
 .left_box_host {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #FFFFFF 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
+.error_box {BORDER-RIGHT: #E1DDDD 1px solid; BORDER-TOP: #E1DDDD 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #E1DDDD 1px solid; BORDER-BOTTOM: #E1DDDD 1px solid;}
 .mar_h{ padding-bottom:10px;}
 .Left_main {FLOAT: left; WIDTH: 263px;}
 .Left_main_vh {FLOAT: left; WIDTH: 213px;}
@@ -34,7 +35,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .bgcolor_left2{background-color:#ffffff;}
 #table_t {width:85%; border:0px; line-height:20px;}
 #table_r {width:100%; border:0px;}
-#table_news{width:690px; border:0px;}
+#table_news{width:680px; border:0px;}
 #table_rr {width:100%; border:0px; line-height:24px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
