--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -1,5 +1,5 @@
-<div class="wid_menu">
-  <table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
+<div class="wid_menu_vh">
+  <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
   	  <tr>
 		<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
 			当前位置 : <a href="/">首页</a> >> <a href="?c=public&a=host">虚拟主机</a>
@@ -12,7 +12,6 @@
 	 	 <!--右边代码开始-->
 		 
 	  	<!--右部虚拟主机开始-->
-			<div class="right_main">
 				<div class="right_top host_bg">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
@@ -53,7 +52,7 @@
 					</table>
 				</div>
 				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-			</div>
+
 		<!--右部虚拟主机结束-->	
 		
 		
