--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -94,6 +94,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_wid{width:33%}
 .right_wid2{height:281px;width:689px;}
 .wid_menu{width:960px;}
+.wid_menu_vh{width:750px;}
 .host_wid{width:190px;}
 .l_host_wid{width:200px;}
 .host_top{padding-top:10px;}
