--- a/user/view/default/help/index.html
+++ b/user/view/default/help/index.html
@@ -2,6 +2,11 @@
 <div class="right">
 	<!--帮助代码开始-->
 		<table align="right" border="0" cellpadding="0" cellspacing="0" width="750">
+			<tr>
+				<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+					当前位置 : <a href="/">首页</a> >> <a href="?c=help&a=index">使用帮助</a>
+				</td>
+			</tr>
 			  <tr><td height="3"></td></tr>
 			  <tr><td bgcolor="#ebf5fb" height="25">&nbsp; 一、新手指南 </td></tr>
 			   <!--提问代码开始-->
