--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -7,12 +7,11 @@
 	 </tr>
 	 <tr><td colspan="2" height="5"></td></tr>
     <tr>
-      
       <td valign="top">
 	 	 <!--右边代码开始-->
 		 
 	  	<!--右部虚拟主机开始-->
-				<div class="right_top host_bg">
+				<div class="right_top host_bg_vh">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
 							<table border="0" cellpadding="0" cellspacing="4" id="table_r">
