--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -2,6 +2,12 @@
 <div align="center" class="right">
 	<table id="table_news" cellpadding="0" cellspacing="0" >
 		<tr>
+			<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+				当前位置 : <a href="/">首页</a> >> <a href="?c=help&a=index">使用帮助</a>
+			</td>
+		</tr>
+		<tr><td colspan="2" height="5"></td></tr>
+		<tr>
 			<td height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
 		</tr>
 		<tr>
