--- a/user/view/default/public/register_n.html
+++ b/user/view/default/public/register_n.html
@@ -1,19 +1,18 @@
 <div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-<div align="center">
-	<table id="table_news" cellpadding="0" cellspacing="0" >
-	<!--左边代码开始-->
+<div align="center" class="right">
+	<table width="690" border="0" cellpadding="0" cellspacing="0" >
 		<tr>
-			<td width="210" rowspan="2" valign="top">
-				<!--注册页左边代码开始-->
-				<div class="left_reg"></div>
-				<!--注册页右边代码结束-->
+			<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+				当前位置 : <a href="/">首页</a> >> <a href="?c=public&a=register_n">用户注册</a>
 			</td>
-		<!--左边代码结束-->
+	 	</tr>
+	 	<tr><td colspan="2" height="5"></td></tr>
+		<tr>
 		<!--右边代码开始-->
-			<td width="750" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
+			<td width="690" height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
 			<!--注册代码开始-->
 				<table cellspacing="10" width="80%">
-				  	<form  name='reg' action="/user/?c=public&a=register&external=1" method='post'>
+					<form  name='reg' action="/user/?c=public&a=register&external=1" method='post'>
 					 <tr><td align="left" colspan="2"><img src="/user{{$STATIC}}/images/reg3.jpg" /></td></tr>
 					  <tr>
 						<td class="td_bgc right_reg" width="30%">用户：</td>
@@ -51,7 +50,7 @@
 						</td>
 					</tr>
 					</form>
-			  </table>
+				</table>
 			  <!--注册代码开始-->
 			</td>
 		</tr>
