--- a/user/view/default/host/left.html
+++ b/user/view/default/host/left.html
@@ -1,3 +1,4 @@
+<div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
 <!--左部文件开始-->
 	  	<div class="left_main_vh">
 			<!--虚拟主机列表代码开始-->
