--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -83,6 +83,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_top{padding-top:0px;padding-right:0px;}
 .topimg3 {text-align:left;background:url(/user{{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
 .host_bg {text-align:left;background:url(/user{{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.host_bg_vh {text-align:left;background:url(/user{{$STATIC}}images/r_zj2.jpg) 0px no-repeat;line-height:82px;height:281px;width:750px;}
 .left_host_bg {text-align:left;background:url(/user{{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
 .color_red{color:#FF0000;}
 .color_blue{color:#055676;}
