--- a/user/view/default/public/left.html
+++ b/user/view/default/public/left.html
@@ -1,3 +1,4 @@
+<div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
  <!--左部文件开始-->
 	  	<div class="left_main">
 			<!--公告代码开始-->
