--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -60,7 +60,7 @@
 		{{if count($products)>3}}
 	  	<!--右部虚拟主机开始-->
 			<div class="right_main">
-				<div class="right_top host_bg">
+				<div class="right_top host_bg_vh">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
 							<table id="table_r" cellpadding="0" cellspacing="4">
@@ -112,7 +112,7 @@
 		{{if count($products)>6}}
 			<!--右部虚拟主机开始-->
 			<div class="right_main">
-				<div class="right_top host_bg">
+				<div class="right_top host_bg_vh">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
 							<table id="table_r" cellpadding="0" cellspacing="4">
@@ -161,7 +161,7 @@
 		{{if count($products)>9}}
 			<!--右部虚拟主机开始-->
 			<div class="right_main">
-				<div class="right_top host_bg">
+				<div class="right_top host_bg_vh">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
 							<table id="table_r" cellpadding="0" cellspacing="4">
@@ -209,7 +209,7 @@
 		{{if count($products)>12}}
 			<!--右部虚拟主机开始-->
 			<div class="right_main">
-				<div class="right_top host_bg">
+				<div class="right_top host_bg_vh">
 					<table id="table_r" cellpadding="0" cellspacing="0">
 						<tr><td height="257" valign="top">
 							<table id="table_r" cellpadding="0" cellspacing="4">
