--- a/user/view/default/help/index.html
+++ b/user/view/default/help/index.html
@@ -18,7 +18,21 @@
 			</tr>
 			<tr><td>
 					<div class="color_blue right"  id="faq1.1" style="DISPLAY: none">
-						答：注册帐号后在会员中心购买空间
+						答：答：注册会员帐号后登陆会员中心点击购买产品列表，或者在顶部右边的产品快速通道中选择产品注册购买.
+					</div>
+			</td></tr>
+			<!--提问代码结束-->
+						   <!--提问代码开始-->
+			  <tr>
+				<td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
+					<div class="black12 right" style="CURSOR: pointer" onClick="faq('faq1.2')">1.2 问：请问我如何付款?
+					<span class="color_red">查看答案</span></div>
+				</td>
+			</tr>
+			<tr><td>
+					<div class="color_blue right"  id="faq1.2" style="DISPLAY: none">
+						答：目前我们为您提供的支付方式有：网上付款、银行电汇、到我公司付款,支票付费等付款方式,您可以择其一种方便您付款的方式进行支付
+	，支付后可登陆会员中心查看你的余额，如余额未到账，请查看您的充值记录并及时联系我们.
 					</div>
 			</td></tr>
 			<!--提问代码结束-->
@@ -32,23 +46,50 @@
 		  <tr>
 			<td>
 				<div class="color_blue right" id="faq2.1" style="DISPLAY: none">
-					答：用FTP上传
+					答：使用FTP传输工具，或者在管理面板中使用在线文件管理功能上传,如果文件太多，可压缩后上传，我们支持在线解压缩(支持zip格式在线解压)
 				</div>
 			</td>
 		 </tr>
 		  <!--提问代码结束-->
 			<!--提问代码开始-->
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.2')">2.1 问：空间如何上传文件? <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.2')">2.2 问：请问你们的在线安装程序，可以放上我常用的程序吗? <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
 				<div class="color_blue right" id="faq2.2" style="DISPLAY: none">
-					答：用FTP上传
+					答：可以的，只要你的程序是安全的，安装程序可以定制.
 				</div>
 			</td>
 		 </tr>
 		  <!--提问代码结束-->
+		  
+		  			<!--提问代码开始-->
+		  <tr>
+			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.3')">2.3 问：请问我安装了在线安装程序里的discuz程序，我要换别的怎么办? <span class="color_red">查看答案</span></div></td>
+		  </tr>
+		  <tr>
+			<td>
+				<div class="color_blue right" id="faq2.3" style="DISPLAY: none">
+					答：您好，通过在线安装程序里安装的程序，如果您需要更换，可以在安装程序里删除再安装其它程序即可。删除之前请备份数据库.
+				</div>
+			</td>
+		 </tr>
+		  <!--提问代码结束-->
+		  
+		  		  			<!--提问代码开始-->
+		  <tr>
+			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.4')">2.4 问：请问我的网站如何备案? <span class="color_red">查看答案</span></div></td>
+		  </tr>
+		  <tr>
+			<td>
+				<div class="color_blue right" id="faq2.4" style="DISPLAY: none">
+					答：你好，请登陆<a href="http://www.miitbeian.gov.cn" target="_blank">http://www.miitbeian.gov.cn</a>备案网站，注册后填写网站资料，等待信息产业部审核即可.
+				</div>
+			</td>
+		 </tr>
+		  <!--提问代码结束-->
+		 <tr><td height="200"></td></tr>
 	</table>
 	  <!--帮助代码结束-->
 </div>
