--- a/user/view/default/help/index.html
+++ b/user/view/default/help/index.html
@@ -9,6 +9,7 @@
 			</tr>
 			  <tr><td height="3"></td></tr>
 			  <tr><td bgcolor="#ebf5fb" height="25">&nbsp; 一、新手指南 </td></tr>
+			  
 			   <!--提问代码开始-->
 			  <tr>
 				<td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
@@ -22,7 +23,8 @@
 					</div>
 			</td></tr>
 			<!--提问代码结束-->
-						   <!--提问代码开始-->
+			
+			<!--提问代码开始-->
 			  <tr>
 				<td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
 					<div class="black12 right" style="CURSOR: pointer" onClick="faq('faq1.2')">1.2 问：请问我如何付款?
@@ -36,10 +38,12 @@
 					</div>
 			</td></tr>
 			<!--提问代码结束-->
+			
 		  <tr>
 			<td class="nblue12" bgcolor="#ebf5fb" height="25">&nbsp; <span class="nblue14bold">二、虚拟主机常见问题</span> </td>
 		  </tr>
 			<!--提问代码开始-->
+			
 		  <tr>
 			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.1')">2.1 问：空间如何上传文件? <span class="color_red">查看答案</span></div></td>
 		  </tr>
@@ -51,7 +55,8 @@
 			</td>
 		 </tr>
 		  <!--提问代码结束-->
-			<!--提问代码开始-->
+		  
+		<!--提问代码开始-->
 		  <tr>
 			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.2')">2.2 问：请问你们的在线安装程序，可以放上我常用的程序吗? <span class="color_red">查看答案</span></div></td>
 		  </tr>
@@ -64,7 +69,7 @@
 		 </tr>
 		  <!--提问代码结束-->
 		  
-		  			<!--提问代码开始-->
+		  <!--提问代码开始-->
 		  <tr>
 			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.3')">2.3 问：请问我安装了在线安装程序里的discuz程序，我要换别的怎么办? <span class="color_red">查看答案</span></div></td>
 		  </tr>
@@ -77,7 +82,7 @@
 		 </tr>
 		  <!--提问代码结束-->
 		  
-		  		  			<!--提问代码开始-->
+		 <!--提问代码开始-->
 		  <tr>
 			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.4')">2.4 问：请问我的网站如何备案? <span class="color_red">查看答案</span></div></td>
 		  </tr>
@@ -89,6 +94,39 @@
 			</td>
 		 </tr>
 		  <!--提问代码结束-->
+		  
+		 <!--提问代码开始-->
+		  <tr>
+			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.5')">2.5 问：我遇到问题如何寻求帮助？ <span class="color_red">查看答案</span></div></td>
+		  </tr>
+		  <tr>
+			<td>
+				<div class="color_blue right" id="faq2.5" style="DISPLAY: none">
+					当您在使用我们产品时遇到问题，您可以通过以下方式获得帮助
+					1.首先访问我们首页上方帮助中心，查找相应解决方法，强烈建议您使用“输入问题找出答案”功能，即可搜索到所有关于的说明 ；
+					2.如果您无法在客服中心频道中寻找到相应解决方法时，可以登陆我们会员区，在线提交问题，我们工作人员将在第一时间为您解答；
+					3.您也可以随时拨打24小时客户服务热线，我们客服将竭诚为您服务
+						售前电话：0791-88888888
+						售后电话: 0791-88888888
+						
+				</div>
+			</td>
+		 </tr>
+		  <!--提问代码结束-->
+		  
+		  <!--提问代码开始-->
+		  <tr>
+			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.6')">2.6 问：请问你们的产品可以定制我要的大小吗 <span class="color_red">查看答案</span></div></td>
+		  </tr>
+		  <tr>
+			<td>
+				<div class="color_blue right" id="faq2.6" style="DISPLAY: none">
+				您好，我们的产品大小如果您不满意，可以联系我们客服，定制您需要的产品大小。
+				</div>
+			</td>
+		 </tr>
+		  <!--提问代码结束-->
+		  
 		 <tr><td height="200"></td></tr>
 	</table>
 	  <!--帮助代码结束-->
